--- a/nginx/src/package.json
+++ b/nginx/src/package.json
@@ -1,10 +1,12 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
+  "description": "clientside js stuff",
+  "license": "none",
   "author": "",
   "dependencies": {
-    "typescript": "^3.8.3",
-    "jssha": "^3.1.0"
+    "@types/jssha": "^2.0.0",
+    "jssha": "^3.1.0",
+    "typescript": "^3.8.3"
   }
 }
