--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,10 @@ http
    #    proxy_set_header Host $host;
    #}
 
+   location /js{
+     add_header Service-Worker-Allowed /;
+   }
+
     error_page 500 502 503 504 /errors/50x.html;
     error_page 403 404 /errors/404.html;
   }
